# credential-broker

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.agents/skills/gitnexus/gitnexus-cli/: SKILL.md
.github/workflows/: ci.yml  release-assets-verify.yml  release.yml
crates/vault-cli/: Cargo.toml  build.rs  release-pubkey.minisign
crates/vault-cli/src/: main.rs
crates/vault-cli/src/commands/: credential.rs  mod.rs  profile.rs  run.rs  serve.rs  stats.rs  ui.rs  upgrade.rs
crates/vault-cli/src/support/: config.rs  keychain_migration.rs  mod.rs  prompt.rs
crates/vault-cli/tests/: serve_state_path.rs  upgrade_local_fixtures.rs
crates/vault-cli/tests/fixtures/upgrade/: SHA256SUMS  SHA256SUMS.minisig  test-pubkey.minisign
crates/vault-cli/tests/fixtures/upgrade/work/: vault
crates/vault-core/: Cargo.toml
crates/vault-core/src/: errors.rs  lib.rs  models.rs  provider.rs
crates/vault-db/: Cargo.toml
crates/vault-db/src/: bindings.rs  codec.rs  credentials.rs  leases.rs  lib.rs  profiles.rs  sqlx_compat.rs  store.rs  ui_sessions.rs  usage_events.rs
crates/vault-db/tests/: repositories.rs  store_smoke.rs
crates/vault-policy/: Cargo.toml
crates/vault-policy/src/: lease.rs  lib.rs  service.rs
crates/vault-providers/: Cargo.toml
crates/vault-providers/src/: anthropic.rs  generic.rs  lib.rs  openai.rs  registry.rs  schema.rs  twitterapi.rs
crates/vault-secrets/: Cargo.toml
crates/vault-secrets/src/: access.rs  keychain.rs  lib.rs
crates/vault-telemetry/: Cargo.toml
crates/vault-telemetry/src/: lib.rs  rollup.rs  writer.rs
crates/vaultd/: Cargo.toml
crates/vaultd/src/: app.rs  auth.rs  lib.rs  main.rs  static_assets.rs
crates/vaultd/src/routes/: dashboard.rs  events.rs  health.rs  mod.rs  proxy.rs  stats.rs
crates/vaultd/templates/: base.html  credential_row.html  credentials.html  home.html  login.html  profiles.html  sessions.html  stats.html
docs/: ARCHITECTURE.md  RELEASE.md  ROADMAP.md  UAT.md
docs/audits/: README.md
docs/audits/2026-04-14-tob-baseline/: SUMMARY.md  sharp-edges.md  supply-chain-risk-auditor.md  zeroize-audit.md
docs/plans/: 2026-04-13-credential-broker-v2.md  2026-04-13-daily-briefing-data-source-optimization.md  2026-04-13-keychain-trusted-access-plan.md  2026-04-13-phase1-credential-profile-run.md  2026-04-13-step4-daemon-proxy-routes.md  2026-04-13-step5-telemetry-and-stats.md  2026-04-15-capability-broker-phase-plan.md
docs/uat-runs/: 2026-04-14-v0.1.1-post-fix.md  2026-04-14-v0.1.1-pre-ai.md  2026-04-14-v0.1.1-pre.md  FINDINGS.md
migrations/: 0001_init.sql  0002_ui_sessions.sql  0003_usage_events_cost_micros.sql
openspec/: config.yaml
openspec/changes/add-distribution-packaging/: design.md  proposal.md
openspec/changes/add-distribution-packaging/specs/binary-rename/: spec.md
openspec/changes/add-distribution-packaging/specs/github-release-ci/: spec.md
openspec/changes/add-uat-release-gate/: tasks.md
openspec/changes/add-uat-release-gate/specs/uat-release-gate/: spec.md
openspec/changes/add-vault-upgrade-command/: design.md  proposal.md
openspec/changes/add-vault-upgrade-command/specs/release-process/: spec.md
openspec/changes/add-web-dashboard/: design.md  tasks.md
openspec/changes/add-web-dashboard/specs/dashboard-pages/: spec.md
openspec/changes/archive/2026-04-13-add-cli-help-descriptions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-13-fix-dashboard-security-design/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-add-distribution-packaging/: tasks.md
openspec/changes/archive/2026-04-14-add-distribution-packaging/specs/install-script/: spec.md
openspec/changes/archive/2026-04-14-add-stats-json-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-add-stats-json-output/specs/stats-cli-output/: spec.md
openspec/changes/archive/2026-04-14-add-uat-release-gate/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-add-vault-upgrade-command/: tasks.md
openspec/changes/archive/2026-04-14-add-web-dashboard/: proposal.md  tasks.md
openspec/changes/archive/2026-04-14-fix-release-gate-blockers/: design.md
openspec/changes/archive/2026-04-14-harden-audit-findings/: proposal.md  tasks.md
openspec/changes/archive/2026-04-14-merge-daemon-into-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-run-tob-audit-trio/: tasks.md
openspec/changes/archive/2026-04-14-ship-v0-1-0/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-phase-0-compatibility-baseline/: design.md  proposal.md  tasks.md
openspec/changes/fix-dashboard-security-design/specs/dashboard-auth/: spec.md
openspec/changes/fix-release-gate-blockers/: proposal.md  tasks.md
openspec/changes/fix-release-gate-blockers/specs/audit-hardening/: spec.md
openspec/changes/harden-audit-findings/: design.md  tasks.md
openspec/changes/harden-audit-findings/specs/audit-hardening/: spec.md
openspec/changes/run-tob-audit-trio/: design.md  proposal.md  tasks.md
openspec/changes/run-tob-audit-trio/specs/release-process/: spec.md
openspec/changes/run-tob-audit-trio/specs/security-audit-baseline/: spec.md
openspec/changes/ship-v0-1-0/: tasks.md
openspec/changes/ship-v0-1-0/specs/release-process/: spec.md
openspec/specs/audit-hardening/: spec.md
openspec/specs/binary-rename/: spec.md
openspec/specs/cli-help-text/: spec.md
openspec/specs/compatibility-baseline/: spec.md
openspec/specs/dashboard-auth/: spec.md
openspec/specs/dashboard-pages/: spec.md
openspec/specs/dashboard-sse/: spec.md
openspec/specs/github-release-ci/: spec.md
openspec/specs/install-script/: spec.md
openspec/specs/release-process/: spec.md
openspec/specs/security-audit-baseline/: spec.md
openspec/specs/uat-release-gate/: spec.md
openspec/specs/vault-serve-lifecycle/: spec.md
openspec/specs/vault-ui-auto-start/: spec.md
openspec/specs/vault-ui-command/: spec.md
openspec/specs/vault-upgrade/: spec.md
scripts/: sign-release.sh
supply-chain/: config.toml
(+11 files in other folders)
