[workspace]
members = [
  "crates/vault-cli",
  "crates/vaultd",
  "crates/vault-core",
  "crates/vault-db",
  "crates/vault-secrets",
  "crates/vault-providers",
  "crates/vault-policy",
  "crates/vault-telemetry",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
blake3 = "1"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx-core = { version = "=0.8.6", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "chrono", "uuid", "migrate"] }
sqlx-sqlite = { version = "=0.8.6", default-features = false, features = ["chrono", "uuid", "migrate", "bundled"] }
rand = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
