[package]
name = "vault-cli"
version = "0.1.0"
edition = "2024"
description = "Local credential broker for coding agents — store API keys in macOS Keychain, inject via env vars or HTTP proxy"
license = "MIT"
repository = "https://github.com/zengyuzhi/credential-broker"
keywords = ["credentials", "keychain", "api-keys", "security", "proxy"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
rpassword = "7"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zeroize.workspace = true
vault-core = { path = "../vault-core" }
vault-db = { path = "../vault-db" }
vault-providers = { path = "../vault-providers" }
vault-policy = { path = "../vault-policy" }
vault-secrets = { path = "../vault-secrets" }
vault-telemetry = { path = "../vault-telemetry" }
vaultd = { path = "../vaultd" }

[dev-dependencies]
tempfile = "3"
