[package]
name = "vault-db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx-core.workspace = true
sqlx-sqlite.workspace = true
tokio.workspace = true
uuid.workspace = true
vault-core = { path = "../vault-core" }

[dev-dependencies]
tempfile = "3"
vault-policy = { path = "../vault-policy" }
uuid = { workspace = true }
