[package]
name = "vaultd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vault-core = { path = "../vault-core" }
vault-db = { path = "../vault-db" }
vault-policy = { path = "../vault-policy" }
vault-providers = { path = "../vault-providers" }
vault-secrets = { path = "../vault-secrets" }
vault-telemetry = { path = "../vault-telemetry" }
