[package]
name = "vaultd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum.workspace = true
blake3.workspace = true
chrono.workspace = true
subtle.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-stream = "0.3"
futures = "0.3"
tokio.workspace = true
tokio-stream = "0.1"
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zeroize.workspace = true
vault-core = { path = "../vault-core" }
vault-db = { path = "../vault-db" }
vault-policy = { path = "../vault-policy" }
vault-providers = { path = "../vault-providers" }
vault-secrets = { path = "../vault-secrets" }
vault-telemetry = { path = "../vault-telemetry" }

[dev-dependencies]
tempfile = "3"
